feat(widgets): reconfiguration of eww bar with catppuccin

--- a/.config/eww/_colorscheme.scss
+++ b/.config/eww/_colorscheme.scss
@@ -1,11 +1,31 @@
-$colorscheme_red: #EBB9B9;
-$colorscheme_yellow: #E6DFB8;
-$colorscheme_yellow_dimmed: #E8CCA7;
-$colorscheme_cyan: #B8DEEB;
-$colorscheme_green: #B1DBA4;
-$colorscheme_orange: #EAC1C1;
-$colorscheme_magenta: #F6BBE7;
-$colorscheme_black: #20202A;
-$colorscheme_crust: #232634;
-$colorscheme_base: #303446;
-$colorscheme_white: #CDDBF9;
+// Catppuccin Mocha
+$colors_base     : #1E1E2E;
+$colors_crust    : #11111B;
+$colors_mantle   : #181825;
+$colors_surface0 : #313244;
+$colors_surface1 : #43465A;
+$colors_surface2 : #565970;
+$colors_overlay0 : #696D86;
+$colors_overlay1 : #7B819D;
+$colors_overlay2 : #8E95B3;
+$colors_text     : #C6D0F5;
+$colors_subtext0 : #A1A8C9;
+$colors_subtext1 : #B3BCDF;
+
+$colors_rosewater: #F5E0DC;
+$colors_flamingo : #F2CDCD;
+$colors_pink     : #F5C2E7;
+$colors_mauve    : #CBA6F7;
+$colors_red      : #F38BA8;
+$colors_maroon   : #EBA0AC;
+$colors_peach    : #FAB387;
+$colors_yellow   : #F9E2AF;
+$colors_green    : #A6E3A1;
+$colors_teal     : #94E2D5;
+$colors_blue     : #87B0F9;
+$colors_sky      : #89DCEB;
+$colors_sapphire : #74C7EC;
+$colors_lavender : #B4BEFE;
+
+// Modules style
+$text_padding: 0px 10px;
