wip: notification bar

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -107,3 +107,15 @@ slider {
   margin-left: 4px;
   margin-right: 4px;
 }
+
+.notification-top {
+  color: $colors_blue;
+}
+
+.notification-middle {
+  color: $colors_red;
+}
+
+.notification-bottom {
+  color: $colors_yellow;
+}
